--- a/src/main/resources/assets/forgeessentials/lang/en_US.lang
+++ b/src/main/resources/assets/forgeessentials/lang/en_US.lang
@@ -1,3 +1,4 @@
 commands.dummy.permTester=Tests permission fe.dummy.test. Will return true if allowed, false if not.
 commands.dummy.permTester.allowed=Permission is ALLOWED
 commands.dummy.permTester.denied=Permission is DENIED
+commands.core.reload.usage=/fereload Reloads all ForgeEssentials modules.
